Item overflow bug fix.

--- a/src/pages/checklist/checklist.scss
+++ b/src/pages/checklist/checklist.scss
@@ -1,4 +1,9 @@
 checklist {
+    .fdcl-checklist-item-label {
+        overflow: visible !important;
+        text-overflow: initial !important;
+        white-space: initial;
+    }
     .fdcl-footer.copyright {
         text-align: center;
     }
